--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -541,6 +541,9 @@ a {
 a:hover {
     text-decoration: underline;
 }
+iframe {
+    border: none;
+}
 .mdc-card__actions a:hover,
 .mdc-button a:hover,
 .mdc-button:hover,
