--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -38,7 +38,7 @@
         </form>
     </div>
 
-    <div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://thegathering.scot/wp-content/uploads/2017/08/G2018-HP-BANNER-MAIN-1920x450.jpg');">
+    <div class="featured-background-image" style="padding: 1rem 0; background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/banners/scvo-hp-g2018-banner-gb-1400x400.jpg');">
         <div class="container-fluid">
             <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
                 <div class="mdc-layout-grid__inner" style="position: relative;">
