--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -257,17 +257,15 @@
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content">
                     {{#each primaryResponse.hits.hits}}
                         {{#if _source.rendered.scvo_search_result}}
-                            {{#if highlight }}
-                                {{{replace _source.rendered.scvo_search_result "%highlights%" (removeEntities (concat "<p class=\"results-highlights\">..." (join highlight.text_bag " ... ... ") " ...</p>"))}}}
-                            {{else}}
-                                {{{_source.rendered.scvo_search_result}}}
-                            {{/if}}
+                                {{#ifAll (contains _source.rendered.scvo_search_result "%highlights%") (contains _source.rendered.scvo_search_result "%/highlights%") highlight.text_bag}}
+                                    
+                                    {{{regexReplace _source.rendered.scvo_search_result "(%highlights%)(.|[\r\n])*?(%/highlights%)" "img" (removeEntities (concat "<p class=\"results-highlights\">..." (join highlight.text_bag " ... ... ") " ...</p>"))}}}
+                                {{else}}
+                                    TEST
+                                    {{{regexReplace _source.rendered.scvo_search_result "(%/?highlights%)" "igm" ""}}}
+                                {{/ifAll}}
                         {{else}}
-                            {{#if _source.rendered.search_result_scvo}}
-                                {{{replace _source.rendered.search_result_scvo "%highlights%" (removeEntities (concat "<p class=\"results-highlights\">..." (join highlight.text_bag " ... ... ") " ...</p>"))}}}
-                            {{else}}
                                 [ Error - search result template missing ]
-                            {{/if}}
                         {{/if}}
                     {{/each}}
                 </div>
