Added doc type to 'template missing' error message

--- a/functions/test-db/json2/scvo/templates/search.hbs
+++ b/functions/test-db/json2/scvo/templates/search.hbs
@@ -264,7 +264,7 @@
                                     {{{regexReplace _source.rendered.scvo_search_result "(%/?highlights%)" "igm" ""}}}
                                 {{/ifAll}}
                         {{else}}
-                                [ Error - search result template missing ]
+                            [ Error - search result template missing - Document Type: {{_type}} ]
                         {{/if}}
                     {{/each}}
                 </div>
