--- a/functions/test-db/json2/scvo/partials/sidebar-events.hbs
+++ b/functions/test-db/json2/scvo/partials/sidebar-events.hbs
@@ -2,5 +2,5 @@
 
 <p>
     For all event enquiries, please contact:<br />
-    <i class="fas fa-envelope-square"></i> <a href="mailto:alex.thompson@scvo.org.uk">alex.thompson@scvo.org.uk</a>
+    <i class="fas fa-envelope-square"></i> <a href="mailto:events@scvo.org.uk">events@scvo.org.uk</a>
 </p>
