--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -2082,8 +2082,10 @@ footer {
         text-decoration: underline !important;
     }
     .brand-logo {
+        display: block;
+        text-align: right;
         img {
-            margin-bottom: $spacing-unit;
+            margin-bottom: 0;
         }
     }
     .mdc-layout-grid {
@@ -2123,16 +2125,8 @@ footer {
     }
     .footer-copyright {
         font-size: 0.85rem;
-        .row {
-            position: relative;
-        }
-        .logo {
-            position: absolute;
-            bottom: 8px;
-            right: 0.75rem;
-        }
-        p.copyright {
-            margin-bottom: 0;
+        p {
+            margin: 0.7rem 0 0;
         }
     }
 }
