--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -161,7 +161,7 @@
                                     </ul>
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
-                                    <h3>Help with our site</h3>
+                                    <h3>Help</h3>
                                     <ul class="mdc-list">
                                         {{#each menus.footer}}
                                         <li class="mdc-list-item"><a href="{{path}}">{{{label}}}</a></li>
@@ -169,10 +169,10 @@
                                     </ul>
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
-                                    <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                                        <img src="/assets/images/scvo-logo.png" />
-                                    </a>
-                                    <p>The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises.</p>
+                                    <h3>About</h3>
+                                    <p>
+                                        The <strong>Scottish Council for Voluntary Organisations</strong> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises. <a href="/about">Find out more</a>
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -180,11 +180,18 @@
                 </div>
                 <div class="footer-copyright">
                     <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <p>
-                                    &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
-                                </p>
+                        <div class="mdc-layout-grid">
+                            <div class="mdc-layout-grid__inner">
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-9-desktop">
+                                    <p>
+                                        &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="http://www.oscr.org.uk/charities/search-scottish-charity-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
+                                    </p>
+                                </div>
+                                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-3-desktop">
+                                    <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
+                                        <img src="/assets/images/scvo-logo.png" />
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     </div>
