Digital page improvements

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1333,7 +1333,7 @@ iframe {
     .callout {
         padding-bottom: $spacing-unit;
         h2 {
-            margin: $spacing-unit*2 0;
+            margin: $spacing-unit*1.7 0;
         }
         .mdc-card {
             box-shadow: none;
@@ -1341,6 +1341,9 @@ iframe {
                 margin: 0;
             }
         }
+    }
+    .page-cta {
+        margin-bottom: $spacing-unit/2;
     }
     .heading h1.mdc-card__title--large {
         font-size: 2.2rem;
@@ -1627,6 +1630,7 @@ h1.support-sector {
 }
 
 .mdc-layout-grid {
+    margin: 0;
     padding: 0;
     .mdc-card {
         width: 100%;
@@ -2280,6 +2284,16 @@ footer {
             width: 100%;
         }
     }
+    .digital {
+        .latest_content {
+            .mdc-layout-grid__cell--span-2-desktop {
+                grid-column-end: span 4;
+            }
+            .mdc-layout-grid__cell--span-10-desktop {
+                grid-column-end: span 8;
+            }
+        }
+    }
     .mdc-toolbar.mdc-toolbar--fixed {
         padding-top: 0;
     }
@@ -2325,6 +2339,16 @@ footer {
     .pagination-distance-5 {
         display: none !important;
     }
+    .digital {
+        .latest_content {
+            .mdc-layout-grid__cell--span-2-desktop {
+                grid-column-end: span 1;
+            }
+            .mdc-layout-grid__cell--span-10-desktop {
+                grid-column-end: span 7;
+            }
+        }
+    }
     .splash-image {
         .container-fluid {
             .mdc-layout-grid {
@@ -2340,6 +2364,16 @@ footer {
 @media screen and (max-width: 479px) {
     .home .featured-content .featured-background-image img.header-text {
         margin-right: 0
+    }
+    .digital {
+        .latest_content {
+            .mdc-layout-grid__cell--span-2-desktop {
+                grid-column-end: span 1;
+            }
+            .mdc-layout-grid__cell--span-10-desktop {
+                grid-column-end: span 3;
+            }
+        }
     }
 }
 
