--- a/functions/test-db/json2/scvo/templates/page-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/page-digital.hbs
@@ -25,7 +25,7 @@
                         We're helping people and organisations in Scotland develop their digital potential
                     </h1>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-12-phone cta page-cta v-margin">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-12-phone cta page-cta">
                     <a href="/digital/about" class="mdc-button mdc-button--raised pull-right">Sign up for our e:bulletin</a>
                     <a href="https://twitter.com/digiscot" class="mdc-button mdc-button--raised pull-right" target="_blank">Follow us on Twitter&ensp;<i class="fab fa-twitter" aria-hidden="true"></i></a>
                     <a href="mailto:digital@scvo.org.uk" class="mdc-button mdc-button--raised pull-right" target="_blank">Email us&ensp;<i class="fas fa-envelope" aria-hidden="true"></i></a>
