--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -205,7 +205,7 @@
     </div>
 
     <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
-    <script type="text/javascript" src="//npmcdn.com/headroom.js/dist/headroom.min.js"></script>
+    <script type="text/javascript" src="/assets/js/headroom.min.js"></script>
     <script type="text/javascript">
     // Cookie Consent
     window.cookieconsent_options = {
@@ -219,7 +219,7 @@
     var $buoop = {notify:{i:-5,f:-4,o:-4,s:-2,c:-4},insecure:true,api:5};
     function $buo_f(){
         var e = document.createElement("script");
-        e.src = "//browser-update.org/update.min.js";
+        e.src = "/assets/js/browser-update.min.js";
         document.body.appendChild(e);
     };
     try {document.addEventListener("DOMContentLoaded", $buo_f,false)}
@@ -228,7 +228,7 @@
     <script type="text/javascript">
     {{{ javascript }}}
     </script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
+    <script src="/assets/js/cookieconsent.min.js"></script>
     <script type="text/javascript" src="inline.bundle.js"></script>
     <script type="text/javascript" src="polyfills.bundle.js"></script>
     <script type="text/javascript" src="styles.bundle.js"></script>
