--- a/functions/test-db/json2/scvo/partials/sidebar-events.hbs
+++ b/functions/test-db/json2/scvo/partials/sidebar-events.hbs
@@ -1,6 +1,7 @@
-<h3>Contact us</h3>
-
-<p>
-    For all event enquiries, please contact:<br />
-    <i class="fas fa-envelope-square"></i> <a href="mailto:events@scvo.org.uk">events@scvo.org.uk</a>
-</p>
+<div class="static-sidebar">
+    <h3>Contact us</h3>
+    <p>
+        For all event enquiries, please contact:<br />
+        <i class="fas fa-envelope-square"></i> <a href="mailto:events@scvo.org.uk">events@scvo.org.uk</a>
+    </p>
+</div>
