--- a/functions/test-db/json2/scvo/templates/page.hbs
+++ b/functions/test-db/json2/scvo/templates/page.hbs
@@ -54,12 +54,7 @@
                 <h3>Did you mean</h3>
                 {{#each supplimentaryResponses.not_found.hits.hits}}
                     <!-- TITLE: {{{title}}} - SCORE: {{_score}}</h4> -->
-                    {{#ifAll (contains _source.rendered.scvo_search_result "%highlights%") (contains _source.rendered.scvo_search_result "%/highlights%") highlight.text_bag}}
-                        
-                        {{{regexReplace _source.rendered.scvo_search_result "(%highlights%)(.|[\r\n])*?(%/highlights%)" "img" (removeEntities (concat "<p class=\"results-highlights\">..." (join highlight.text_bag " ... ... ") " ...</p>"))}}}
-                    {{else}}
-                        {{{regexReplace _source.rendered.scvo_search_result "(%/?highlights%)" "igm" ""}}}
-                    {{/ifAll}}
+                    {{>highlight-result}}
                 {{/each}}
             {{else}}
                 <p>We couldn't even find anything in our index that looks relevant</p> 
